--- a/vue(shangguigu）/vue-basic/12_列表渲染/列表渲染.md
+++ b/vue(shangguigu）/vue-basic/12_列表渲染/列表渲染.md
@@ -93,5 +93,27 @@ vm.$set(target，propertyName/index，value)
 					Vue.set(this.student,'sex','男')
 					this.$set(this.student,'sex','男')
 				}
-
 特别注意：Vue.set() 和 vm.$set() 不能给vm 或 vm的根数据对象 添加属性！！！
+
+## 数据劫持和数据代理都离不开Object.defineProperty()：
+数据劫持定义：
+什么是数据劫持？
+
+数据劫持的定义
+数据劫持是指通过拦截对对象属性的访问和修改操作，从而在数据变化时执行特定逻辑的技术。
+
+核心原理
+属性拦截：使用 Object.defineProperty 或 Proxy 拦截对象属性的读取（get）和设置（set）操作
+依赖收集：在数据被访问时收集依赖关系
+变更通知：在数据被修改时触发相应的更新操作
+
+数据代理定义：
+数据代理是指通过一个代理对象来控制对目标对象的访问，代理对象拦截对原始数据的操作，从而在数据访问和修改时执行额外的逻辑。
+
+与数据劫持的区别
+数据劫持：直接修改或扩展原对象的属性访问器（如使用 Object.defineProperty）
+数据代理：创建一个新对象作为代理，拦截对原对象的访问（如使用 Proxy）
+核心特性
+拦截操作：可以拦截对目标对象的各种操作（读取、写入、删除等）
+透明访问：通过代理访问对象时，代码看起来和直接访问原对象一样
+扩展能力：在访问前后可以执行额外逻辑
