--- a/vue(shangguigu）/vue-basic/11_条件渲染/条件渲染.md
+++ b/vue(shangguigu）/vue-basic/11_条件渲染/条件渲染.md
@@ -13,4 +13,9 @@
 适用于：切换频率较高的场景。
 特点：不展示的DOM元素未被移除，仅仅是使用样式隐藏掉
 
+## <template> </template>
+Vue 提供的虚拟容器标签，专门用来包裹多个元素，它的核心特点是：
+本身不会被渲染成真实的 DOM 节点（比如不会在页面中出现<template>标签）；
+可以配合v-if/v-else等指令，实现 “批量控制多个元素” 的效果。
+
 3.备注：使用v-if的时，元素可能无法获取到，而使用v-show一定可以获取到。
